Owl Card Verbiage and links

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -681,7 +681,16 @@ Hello, <%= session[:cas_user] %>!
 			  <div class="step-content">			  		
 		  		<h3 class="title">Get Your Owl Card</h3>
 				<p>
-					The OWL Card is a gateway to retail and services at Florida Atlantic University. All students are required to obtain one, as it serves as your official photo identification, debit card, Owl Bucks card, library card, residence hall building key, meal card for those who have meal plans, and your ticket to many FAU events, including sporting events. You will need to present your OWL card to receive the benefits of the many services offered at FAU. The OWL card is also recommended for FAU faculty and staff.
+					All Florida Atlantic University students are required to obtain an OWL Card. It serves as your official photo identification, as well as your FAU debit card, library card, and ticket to certain university events. In addition, for those that choose, it can also serve as your BB&T ATM card, residence hall building key and meal plan card. The FAU OWL Card is also recommended for faculty and staff.
+				</p>
+				
+
+				<p>
+					To obtain your OWL Card, visit the <a href="http://www.fau.edu/business-services/owl-card/locations.php" target="_blank">OWL Card Center</a> on Florida Atlantic University's Boca Raton or Davie campus. Bring with you a photo ID, either your driver's license, military ID or passport. You must also be registered for classes within the current semester or have a current FAU employment contract or LLS membership card.
+				</p>
+
+				<p>
+					<a href="http://www.fau.edu/business-services/owl-card/request.php" target="_blank">[More Information]</a>
 				</p>
 			  </div>			
 			</div>
