added verbiage to book advance, owl card & learning communities

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -567,6 +567,26 @@ Hello, <%= session[:cas_user] %>!
 				<p>
 					Learning Communities help you make a fast, smooth, and easy transition to FAU! Connect with 20-24 other students who share similar interests by taking the same classes together your freshman year. Learning Communities make it easier to meet people, make friends and form study groups while connecting you through shared experiences and themed activities. 
 				</p>	
+
+				<p>
+					<strong>
+					 In a Learning Community you will:<br>
+						<ul>
+						    <li>Get to know people and make friends in your major or area of interest from the 1st day</li>
+						    <li>Build relationships to make FAU’s campus feel more personal</li>
+						    <li>Maximize your academic success</li>
+						    <li>Get connected to FAU resources</li>
+						    <li>Increase your likelihood to graduate on time</li>
+						    <li>Develop a supportive network consisting of other students, peer mentors, and professors</li>
+						    <li>Have fun!</li>
+						</ul>
+					</strong>
+				</p>
+
+				<p>
+					<a href="http://www.fau.edu/class/learning-community/flc/lcsoffered.php" target="_blank">[More Information]</a>
+				</p>
+
 			  </div>			
 			</div>
 		  </li>
@@ -711,9 +731,31 @@ Hello, <%= session[:cas_user] %>!
 			<div id="step-18" class="collapse">				   
 			  <div class="step-content">			  		
 		  		<h3 class="title">Book Advance Program</h3>
-				<p>A University monetary advance available to degree-seeking students enrolled at least half-time at FAU for assistance with purchasing textbooks, emergency funds relating to educational expenses and unanticipated living expenses until the disbursement of financial aid. Keep in mind that the Short Term Advance is NOT a source to assist with paying your tuition and other related fees.</p>
+				<p>A University monetary  is advance available to degree-seeking students enrolled at least half-time at FAU for assistance with purchasing textbooks, emergency funds relating to educational expenses and unanticipated living expenses until the disbursement of financial aid. Keep in mind that the Short Term Advance is NOT a source to assist with paying your tuition and other related fees.</p>
+
+				<p>
+					Maximum loan amount is $750 with a non-refundable processing of $7.50 assessed. Students must meet additional eligibility criteria.
+				</p>
+
+				<p>
+					To access the online Short Term Advance Application:<br>
+
+					<ol>
+					    <li>Log on to MyFAU</li>
+					    <li>Click on the "Money Matters!" tab</li>
+					    <li>Click on the "Short Term Advance Application" link</li>
+					</ol>
+
+				</p>
+
+				<p>
+					<a href="http://www.fau.edu/finaid/other/sta.php" target="_blank">[More Information]</a>
+				</p>
 			  </div>			
 			</div>
+
+			
+
 		  </li>
 
 		  <li class="panel">
@@ -798,7 +840,13 @@ Hello, <%= session[:cas_user] %>!
                   	<li>Fill out the information correctly.</li>
                   	<li>Print out the confirmation page and follow the instructions carefully.</li>
                   </ol>
-              
+              		
+              	   <p>              	   	
+              	   	<br>
+              	   	<a href="http://www.fau.edu/parking/allpermits.php" target="_blank">
+              	   		[More Information]
+              	   	</a>
+              	   </p>
 				</div>			
 			</div>
 		  </li>
