added more information hyperlinks to registration, orienation, oars, etc.

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -346,7 +346,10 @@ Hello, <%= session[:cas_user] %>!
 		  				<%= get_immunization_status(@znum) %><br>
 		  			</strong>
 		  		</p>
-		  		
+
+		  		<p>
+					<a href="http://www.fau.edu/shs/additional/immunization.php" target="_blank">[More Information]</a>
+		  		</p>
 
 		  		<div class="buttons-box text-right">
 				  <button type="button" class="btn btn-danger" id="immunizationBut">Continue</button> 
@@ -552,6 +555,11 @@ Hello, <%= session[:cas_user] %>!
 
 				</strong>
 
+
+		  		<p>
+					<a href="http://www.fau.edu/uas/oars.php" target="_blank">[More Information]</a>
+		  		</p>
+
 			  </div>			
 			</div>
 		  </li>
@@ -623,6 +631,10 @@ Hello, <%= session[:cas_user] %>!
 					</strong>
 					</p>
 
+				<p>
+					<a href="http://www.fau.edu/orientation/" target="_blank">[More Information]</a>
+				</p>
+
 			  </div>			
 			</div>
 		  </li>
@@ -648,6 +660,11 @@ Hello, <%= session[:cas_user] %>!
 					<strong>
 						<%= registered_hours(@znum)%>
 					</strong>
+				</p>
+
+				
+				<p>
+					<a href="https://www.fau.edu/registrar/registration/" target="_blank">[More Information]</a>
 				</p>
 
 			  </div>			
