push static_pages/main.html.erb

--- a/app/views/static_pages/main.html.erb
+++ b/app/views/static_pages/main.html.erb
@@ -52,7 +52,7 @@
         
         <header class="page-header">
             <div class="container">
-        <h3 class="title col-sm-6 col-md-6">Method 1:<br> Login with your FAU NetID</h3>
+        <h3 class="title col-sm-6 col-md-6">Method 1:<br> Use your FAU NetID</h3>
             </div>
         </header>
 
@@ -68,7 +68,7 @@
           
           <header class="page-header">
             <div class="container">
-            <h3 class="title col-sm-6 col-md-6">Method 2: <br> Login with your Admissions Credentials</h3>
+            <h3 class="title col-sm-6 col-md-6">Method 2: <br> Use your Admissions Credentials</h3>
             </div>
           </header>
                   <p>If you do NOT have an FAU NetID yet you can login with the same credentials you set up when applying to FAU</p>
