fix for bad redirect to 443

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -307,7 +307,7 @@ Hello, <%= session[:cas_user] %>!
 								  </div> -->
 
 								  <div class="buttons-box clearfix">
-									<button class="btn btn-default">Create my account</button>
+									<button class="btn btn-default">Save</button>
 									<span class="required"><b>*</b> Required Field</span>
 								  </div>
 								</form><!-- .form-box -->
