removed debugging dump

--- a/app/views/static_pages/main.html.erb
+++ b/app/views/static_pages/main.html.erb
@@ -110,11 +110,11 @@
 </section><!-- #main -->
 
 
-<%= request.server_name %>
+<%#= request.server_name %>
 
 <hr>
 
-<%= request.inspect %>
+<%#= request.inspect %>
 
 <%#= render 'static_pages/footer' %>
 
