Wiring modules to database & cumulative update

--- a/app/views/ftic_modules_availables/show.html.erb
+++ b/app/views/ftic_modules_availables/show.html.erb
@@ -110,5 +110,5 @@
   <%= @modules_available.vehiclereg %>
 </p>
 
-<%= link_to 'Edit', edit_modules_available_path(@modules_available) %> |
-<%= link_to 'Back', modules_availables_path %>
+<%= link_to 'Edit', edit_ftic_modules_available_path(@modules_available) %> |
+<%= link_to 'Back', ftic_modules_availables_path %>
