--- a/app/views/ftic_modules_availables/index.html.erb
+++ b/app/views/ftic_modules_availables/index.html.erb
@@ -5,45 +5,68 @@
 <div class="container col-sm-10 col-md-10">
   <div class="col-sm-10 col-md-10 bottom-padding">
 
-      <h1>Onboarding FTIC Queue</h1>
+      <header class="page-header">
+        <div class="container">
+          <h1 class="title">FTIC Module Availabilty Queue</h1>
+        </div>
+      </header>
 
+      <div class="container">
+    <div class="row">
+      <article class="col-sm-9 col-md-9 content">
+    <div class="my-account">
       <div class="table-responsive">
-      <table class="table table-condensed table-striped table-hover">
-        <thead>
-          <tr>
-            <th>Znumber</th>
-            <th>Netid</th>
-            <th>Welcome</th>
-            <th>Deposit</th>
-            <th>Account</th>
-            <th>Communication</th>
-            <th>Immunization</th>
-            <th>Finaid</th>
-            <th>Housingfee</th>
-            <th>Residency</th>
-            <th>Housingmealplan</th>
-            <th>Aleks</th>
-            <th>Oars</th>
-            <th>Learning comm</th>
-            <th>Orientation</th>
-            <th>Registration</th>
-            <th>Emergency</th>
-            <th>Faualert</th>
-            <th>Owlcard</th>
-            <th>Bookadvance</th>
-            <th>Tution</th>
-            <th>Vehiclereg</th>
-            <th></th>
-            <th></th>
-            <th></th>
+      <table class="table table-striped  table-condensed table-bordered table-hover text-left my-orders-table">
+       <!--  <thead>
+        <tr class="first last">
+          <th class="col-sm-6 col-md-12">#</th>
+          <th class="col-sm-6 col-md-12">Date</th>
+          <th class="col-sm-6 col-md-12">Ship To</th>
+          <th class="col-sm-6 col-md-12"><span class="nobr">Order Total</span></th>
+          <th class="col-sm-6 col-md-12">Status</th>
+          <th class="text-center">Actions</th>
+        </tr>
+        </thead> -->
+          <thead>
+          <tr class="first last">
+            <th class="col-sm-6 col-md-12">Znumber</th>
+            <th class="col-sm-6 col-md-12">Netid</th>
+            <th class="col-sm-6 col-md-12">Actions</th>  
+            <th class="col-sm-6 col-md-12">Welcome</th>
+            <th class="col-sm-6 col-md-12">Deposit</th>
+            <th class="col-sm-6 col-md-12">Account</th>
+            <th class="col-sm-6 col-md-12">Communication</th>
+            <th class="col-sm-6 col-md-12">Immunization</th>
+            <th class="col-sm-6 col-md-12">Finaid</th>
+            <th class="col-sm-6 col-md-12">Housingfee</th>
+            <th class="col-sm-6 col-md-12">Residency</th>
+            <th class="col-sm-6 col-md-12">Housingmealplan</th>
+            <th class="col-sm-6 col-md-12">Aleks</th>
+            <th class="col-sm-6 col-md-12">Oars</th>
+            <th class="col-sm-6 col-md-12">Learning comm</th>
+            <th class="col-sm-6 col-md-12">Orientation</th>
+            <th class="col-sm-6 col-md-12">Registration</th>
+            <th class="col-sm-6 col-md-12">Emergency</th>
+            <th class="col-sm-6 col-md-12">Faualert</th>
+            <th class="col-sm-6 col-md-12">Owlcard</th>
+            <th class="col-sm-6 col-md-12">Bookadvance</th>
+            <th class="col-sm-6 col-md-12">Tution</th>
+            <th class="col-sm-6 col-md-12">Vehiclereg</th>
+                      
           </tr>
         </thead>
-
         <tbody>
-          <% @modules_availables.each do |modules_available| %>
+       
+       
+
+         <% @modules_availables.each do |modules_available| %>
             <tr>
               <td><%= modules_available.znumber %></td>
               <td><%= modules_available.netid %></td>
+               <td>
+                 <%= link_to 'Edit', edit_ftic_modules_available_path(modules_available) %> <br>
+                 <a href="/home?znum=<%= modules_available.znumber %>" target="_blank">Proxy</a>               
+              </td>
               <td>
                 <% if modules_available.welcome == 1 %>
                   <%= image_tag('/assets/Check_16x16.png')  %>
@@ -187,18 +210,21 @@
                   <%= image_tag('/assets/Delete_16x16.png')  %>
                 <% end %>
               </td>
-              <td><%= link_to 'Show', modules_available %></td>
-              <td><%= link_to 'Edit', edit_modules_available_path(modules_available) %></td>
+              <!-- <td><%#= link_to 'Show', ftic_modules_available %></td> -->
+             
              <!--  <td><%#= link_to 'Destroy', modules_available, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
             </tr>
           <% end %>
         </tbody>
       </table>
-
-      <br>
-
-      <%#= link_to 'New Modules available', new_modules_available_path %>
-
       </div>
+    
+      </article><!-- .content -->
+    
+   
+    </div>
+  </div>
+
+     
   </div>
 </div>
