--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -664,7 +664,7 @@ Hello, <%= session[:cas_user] %>!
 				<a href="#step-13" class="collapsed step-title disabled" data-parent="#checkoutsteps" data-toggle="">
 			<% end %>
 
-			  <div class="number"><!-- Step 13 -->  <%= get_statusicon(@orientation_available, @orientation_complete) %></div>
+			  <div class="number"><!-- Step 13 --><%= get_statusicon(@orientation_available, @orientation_complete) %></div>
 			  <h6>Orientation</h6>
 			</a>
 			
@@ -700,7 +700,7 @@ Hello, <%= session[:cas_user] %>!
 		   		<a href="#step-14" class="collapsed step-title disabled" data-parent="#checkoutsteps" data-toggle="">
 		   	<% end %>
 
-			  <div class="number"><!-- Step 14 --> <%= get_statusicon(@reg_available, @reg_complete) %></div>
+			  <div class="number"><!-- Step 14 --><%= get_statusicon(@reg_available, @reg_complete) %></div>
 			  <h6>Registration</h6>
 			</a>
 			
@@ -709,13 +709,22 @@ Hello, <%= session[:cas_user] %>!
 		  		<h3 class="title">Register for Classes</h3>
 				<p>Lorem ipsum Ad ullamco elit reprehenderit veniam aute minim dolore ullamco incididunt ea do. Lorem ipsum Reprehenderit do consectetur dolore do fugiat proident incididunt consequat minim ullamco. Lorem ipsum Proident laboris dolore in aliqua ut magna minim irure ut proident. Lorem ipsum Anim dolore incididunt aliquip do irure aute reprehenderit reprehenderit enim ut. Lorem ipsum Reprehenderit commodo anim laboris ex cupidatat dolor deserunt dolore exercitation Ut et culpa.</p>
 
+				<p>Your registration status:</p>
+
 				<div class="alert alert-border alert-danger text-center fade in alert-dismissable">
 						<button data-dismiss="alert" class="close" type="button">×</button>
-						<p>
+						<br>
+						<table class="table table-striped text-left order-details">	
+							<thead>
+				  				<tr>
+				  					<th class="product-name">Your registered credit hours</th><th class="product-total">Term</th>
+				  				</tr>
+				  			</thead>
 							<strong>
 								<%= registered_hours(@znum)%>
 							</strong>
-						</p>
+						</table>
+					
 				</div>
 
 				
