--- a/app/views/ftic_modules_availables/index.html.erb
+++ b/app/views/ftic_modules_availables/index.html.erb
@@ -4,54 +4,54 @@
 
 <div class="container col-sm-10 col-md-10">
   <div class="col-sm-10 col-md-10 bottom-padding">
-
+  <div class="container">
       <header class="page-header">
         <div class="container">
-          <h1 class="title">FTIC Module Availabilty Queue</h1>
+          <h3 class="title">FTIC Module Availabilty Queue</h3>
         </div>
       </header>
 
-      <div class="container">
+     
     <div class="row">
-      <article class="col-sm-9 col-md-9 content">
+      <article class="col-sm-12 col-md-12 content">
     <div class="my-account">
       <div class="table-responsive">
-      <table class="table table-striped  table-condensed table-bordered table-hover text-left my-orders-table">
+      <table id="ftictable" class="table table-striped table-condensed table-hover text-left my-orders-table">
        <!--  <thead>
         <tr class="first last">
-          <th class="col-sm-6 col-md-12">#</th>
-          <th class="col-sm-6 col-md-12">Date</th>
-          <th class="col-sm-6 col-md-12">Ship To</th>
-          <th class="col-sm-6 col-md-12"><span class="nobr">Order Total</span></th>
-          <th class="col-sm-6 col-md-12">Status</th>
+          <th>#</th>
+          <th>Date</th>
+          <th>Ship To</th>
+          <th><span class="nobr">Order Total</span></th>
+          <th>Status</th>
           <th class="text-center">Actions</th>
         </tr>
         </thead> -->
           <thead>
-          <tr class="first last">
-            <th class="col-sm-6 col-md-12">Znumber</th>
-            <th class="col-sm-6 col-md-12">Netid</th>
-            <th class="col-sm-6 col-md-12">Actions</th>  
-            <th class="col-sm-6 col-md-12">Welcome</th>
-            <th class="col-sm-6 col-md-12">Deposit</th>
-            <th class="col-sm-6 col-md-12">Account</th>
-            <th class="col-sm-6 col-md-12">Communication</th>
-            <th class="col-sm-6 col-md-12">Immunization</th>
-            <th class="col-sm-6 col-md-12">Finaid</th>
-            <th class="col-sm-6 col-md-12">Housingfee</th>
-            <th class="col-sm-6 col-md-12">Residency</th>
-            <th class="col-sm-6 col-md-12">Housingmealplan</th>
-            <th class="col-sm-6 col-md-12">Aleks</th>
-            <th class="col-sm-6 col-md-12">Oars</th>
-            <th class="col-sm-6 col-md-12">Learning comm</th>
-            <th class="col-sm-6 col-md-12">Orientation</th>
-            <th class="col-sm-6 col-md-12">Registration</th>
-            <th class="col-sm-6 col-md-12">Emergency</th>
-            <th class="col-sm-6 col-md-12">Faualert</th>
-            <th class="col-sm-6 col-md-12">Owlcard</th>
-            <th class="col-sm-6 col-md-12">Bookadvance</th>
-            <th class="col-sm-6 col-md-12">Tution</th>
-            <th class="col-sm-6 col-md-12">Vehiclereg</th>
+          <tr >
+            <th>Znumber</th>
+            <th>Netid</th>
+            <th>Actions</th>  
+            <th>Welcome</th>
+            <th>Deposit</th>
+            <th>Account</th>
+            <th>Comm.</th>
+            <th>Immun.</th>
+            <th>Finaid</th>
+            <th>House fee</th>
+            <th>Residency</th>
+            <th>H/M  Plans</th>
+            <th>Aleks</th>
+            <th>Oars</th>
+            <th>Learn. comm.</th>
+            <th>Orientation</th>
+            <th>Reg.</th>
+            <th>Emergency</th>
+            <th>FAU Alert</th>
+            <th>Owl Card</th>
+            <th>Book Advance</th>
+            <th>Tuition</th>
+            <th>Vehicle</th>
                       
           </tr>
         </thead>
@@ -228,3 +228,38 @@
      
   </div>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript" language="javascript" src="//cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" language="javascript" src="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+
+<script type="text/javascript">
+$(document).ready(function(){
+   $('#ftictable').dataTable( {
+    "aoColumns": [
+      null,
+      null,
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false },
+      { "bSortable": false }
+    ] } );
+});
+</script>
