--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,11 @@
   <%= stylesheet_link_tag "css/ladda.min.css" %>
   <%= stylesheet_link_tag "css/datepicker.css" %>
   <%= stylesheet_link_tag "css/jquery.scrollbar.css" %>
+  <%= stylesheet_link_tag "css/datatables.min.css" %>
   
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css">
+
   <!-- Theme CSS -->
   <%= stylesheet_link_tag "css/style.css" %>
 
@@ -52,17 +56,64 @@
 	<link rel='stylesheet' href="css/ie/ie8.css" %>
   <![endif]-->
 
+  <style type="text/css">
+    /*
+ *  Usage:
+ *
+ *    <div class="sk-spinner sk-spinner-three-bounce">
+ *      <div class="sk-bounce1"></div>
+ *      <div class="sk-bounce2"></div>
+ *      <div class="sk-bounce3"></div>
+ *    </div>
+ *
+ */
+.sk-spinner-three-bounce.sk-spinner {
+  margin: 0 auto;
+  width: 70px;
+  text-align: center; }
+.sk-spinner-three-bounce div {
+  width: 18px;
+  height: 18px;
+  background-color: #003366;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-threeBounceDelay 1.4s infinite ease-in-out;
+          animation: sk-threeBounceDelay 1.4s infinite ease-in-out;
+  /* Prevent first frame from flickering when animation starts */
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both; }
+.sk-spinner-three-bounce .sk-bounce1 {
+  -webkit-animation-delay: -0.32s;
+          animation-delay: -0.32s; }
+.sk-spinner-three-bounce .sk-bounce2 {
+  -webkit-animation-delay: -0.16s;
+          animation-delay: -0.16s; }
+@-webkit-keyframes sk-threeBounceDelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+@keyframes sk-threeBounceDelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+  </style>
+
+
+ 
   <%= csrf_meta_tags %>
 </head>
 
 <body class="fixed-header">
 
+  <%= yield %>
 
-
-<%= yield %>
-
-<noscript>Either your browser does not support JavaScript or you have disabled Javascript! Either switch to a different browser or enable Javascript on your current browser.</noscript>
-
+  <noscript>Either your browser does not support JavaScript or you have disabled Javascript! Either switch to a different browser or enable Javascript on your current browser.</noscript>
 
 </body>
 </html>
